# rusted_trip_wire

./: Cargo.toml
src/: main.rs  util.rs
