[package]
name = "rusted_trip_wire"
version = "0.1.0"
edition = "2021"
authors = ["foom"]
description = "Watch a file or directory and trigger commands on changes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.2", features = ["derive"] }
log = "0.4.21"
log4rs = "1.3.0"
notify = "6.1.1"
regex = "1.10.4"

[[bin]]
name="rtw"
path="src/main.rs"
